--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "save": "^2.4.0",
+    "swiper": "^4.5.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
