--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "core-js": "^2.6.5",
     "save": "^2.4.0",
     "swiper": "^4.5.0",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
